k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: iot-webhook
  name: iot-webhook
  namespace: iot
spec:
  minReadySeconds: 40
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: iot-webhook
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: iot-webhook
    spec:
      containers:
      - env:
        - name: ASPNETCORE_URLS
          value: http://+:31400
        - name: VAULT-SECRET
          valueFrom:
            secretKeyRef:
              key: vault-secret
              name: iot
        image: cisien/event-grid-webhook:latest
        imagePullPolicy: Always
        name: iot-webhook
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      nodeSelector:
        beta.kubernetes.io/os: linux
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
