k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: iot-webhook-service
  namespace: iot
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 31400
  selector:
    app: iot-webhook
  sessionAffinity: None
  type: ClusterIP
